compiler/tools/fpp-check/test/state_machine/undef/state_error.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/state_machine/undef/state_error.fpp:2.17
  initial enter S
                ^
error: symbol S is not defined
note: looking for a state here
